Fixed next page in album, and set max albums to 12 per page

--- a/nablapps/album/templates/album/album_list.html
+++ b/nablapps/album/templates/album/album_list.html
@@ -32,7 +32,7 @@
     <ul class="pager">
       {% if page_obj.has_previous %}
           <li class="previous">
-              <a href="{{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
+              <a href="?page={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
           </li>
       {% endif %}
 
@@ -42,7 +42,7 @@
 
         {% if page_obj.has_next %}
             <li class="next">
-                <a href="{{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
+                <a href="?page={{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
     </ul>
