--- a/nablapps/events/static/events/event_main_page.css
+++ b/nablapps/events/static/events/event_main_page.css
@@ -59,6 +59,10 @@
     font-size: medium;
 }
 
+.right {
+    float: right;
+}
+
 .month__name {
     color: #507eff;
     border-bottom: 1px solid #507eff;
@@ -121,6 +125,10 @@
     color: white;
     font-size: 2em;
     box-shadow: 0px 4px 7px -2px black;
+}
+
+.event__bedpres {
+    background: #5075cb; 
 }
 
 form.filter input[type="radio"] {
