la til pagination fra boostrap 4

--- a/nablapps/album/templates/album/album_overview.html
+++ b/nablapps/album/templates/album/album_overview.html
@@ -44,9 +44,9 @@
     {% endfor %}
 </div>
 {% endfor %}
-    <ul class="pager">
-          <li class="previous">
-              <a href="{{ parent_url }}"><span aria-hidden="true">&larr;</span> {{parent_name}}</a>
+    <ul class="pagination">
+          <li class="page-item">
+              <a  class="page-link" href="{{ parent_url }}"><span aria-hidden="true">&larr;</span> {{parent_name}}</a>
           </li>
     </ul>
 
