--- a/nablapps/exchange/templates/exchange/info.html
+++ b/nablapps/exchange/templates/exchange/info.html
@@ -7,9 +7,9 @@
     {{ object.body|markdown }}
 
     {% with univ=object.ex.univ %}
-    <ul class="pager">
-        <li class="previous">
-            <a href="{% url 'ex_detail_list' univ.pk %}"><span aria-hidden="true">&larr;</span> Tilbake til {{ univ.univ_navn }}</a>
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" href="{% url 'ex_detail_list' univ.pk %}"><span aria-hidden="true">&larr;</span> Tilbake til {{ univ.univ_navn }}</a>
         </li>
     </ul>
     {% endwith %}
