--- a/nablapps/accounts/templates/accounts/list.html
+++ b/nablapps/accounts/templates/accounts/list.html
@@ -42,18 +42,18 @@
     <p>Vi fant ingen brukere som matchet søket ditt :(</p>
 {% endif %}
 <nav>
-    <ul class="pager">
+    <ul class="pagination">
         {% if page_obj.has_previous %}
-        <li class="previous">
-            <a href="?side={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige</span></a>
+        <li class="page-item">
+            <a class="page-link" href="?side={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige</span></a>
         </li>
         {% endif %}
-        <li class="disabled pager-counter">
-            Side {{ page_obj.number }} av {{ paginator.num_pages }}
+        <li class="disabled page-item pager-counter">
+            <a class="page-link"> Side {{ page_obj.number }} av {{ paginator.num_pages }}</a>
         </li>
         {% if page_obj.has_next %}
-        <li class="next">
-            <a href="?side={{ page_obj.next_page_number }}"><span class="hidden-xs">Neste </span><span aria-hidden="true">&rarr;</span></a>
+        <li class="page-item">
+            <a class="page-link" href="?side={{ page_obj.next_page_number }}"><span class="hidden-xs">Neste </span><span aria-hidden="true">&rarr;</span></a>
         </li>
         {% endif %}
     </ul>
