--- a/nablapps/exchange/templates/exchange/ex_detail_list.html
+++ b/nablapps/exchange/templates/exchange/ex_detail_list.html
@@ -49,9 +49,9 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <ul class="pagination">
-        <li class="page-item">
-            <a class="page-link" href="{% url 'ex_list' %}"><span aria-hidden="true">&larr;</span> Tilbake til oversikten</a>
+    <ul class="pager">
+        <li class="previous">
+            <a href="{% url 'ex_list' %}"><span aria-hidden="true">&larr;</span> Tilbake til oversikten</a>
         </li>
     </ul>
 
