--- a/templates/content/includes/comments.html
+++ b/templates/content/includes/comments.html
@@ -12,5 +12,5 @@
 {% if user.is_authenticated %}
     {% render_comment_form for content %}
 {% else %}
-    <p class="card card-body bg-light">Logg inn for å skrive en kommentar</p>
+    <p class="well">Logg inn for å skrive en kommentar</p>
 {% endif %}
