--- a/templates/content/includes/sidebar-admin.html
+++ b/templates/content/includes/sidebar-admin.html
@@ -1,6 +1,6 @@
 {% if admin_links and user.is_staff %}
-<div class="card panel-default">
-    <div class="card-header">
+<div class="panel panel-default">
+    <div class="panel-heading">
         Admin
     </div>
     <ul class="nav">
