--- a/nablapps/album/templates/album/album_image.html
+++ b/nablapps/album/templates/album/album_image.html
@@ -12,20 +12,20 @@
     {{ image.description }}
   </p>
   <nav>
-      <ul class="pagination">
+      <ul class="pager">
         {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="../{{ page_obj.previous_page_number }}/"><span aria-hidden="true">&larr;</span> forrige</a>
+            <li class="previous">
+                <a href="../{{ page_obj.previous_page_number }}/"><span aria-hidden="true">&larr;</span> forrige</a>
             </li>
         {% endif %}
 
-          <li class="disabled page-item pager-counter">
-              <a class="page-link">  Bilde {{ page_obj.number }} av {{ page_obj.paginator.num_pages }} </a>
+          <li class="disabled pager-counter">
+              Bilde {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
           </li>
 
           {% if page_obj.has_next %}
-              <li class="page-item">
-                  <a class="page-link" href="../{{ page_obj.next_page_number }}/">neste  <span aria-hidden="true">&rarr;</span></a>
+              <li class="next">
+                  <a href="../{{ page_obj.next_page_number }}/">neste  <span aria-hidden="true">&rarr;</span></a>
               </li>
           {% endif %}
       </ul>
