--- a/nablapps/interactive/templates/interactive/place.html
+++ b/nablapps/interactive/templates/interactive/place.html
@@ -570,7 +570,7 @@ colorPreviewDiv:hover {
     </div>
 
     <div id="UIDiv" style="text-align:center;width:300px;margin:5px;">
-        <div class="card card-body bg-light" style="min-height:200px";>
+        <div class="well" style="min-height:200px";>
             <div id="colorPreviewDiv" class="color-preview" style="cursor:pointer;display:inline-block;width:6em;height:6em;background-color:transparent;text-align:center;vertical-align:middle;position:relative">
                 <p id="selectedPixelP" style="color:white;font-size:1.3em;padding:0px;position:relative;transform:translateY(-50%);top:50%;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">(?,?)</p>
                 <span id="tooltip">Kopier permalenke</span>
@@ -580,7 +580,7 @@ colorPreviewDiv:hover {
 
         {% if request.user.is_authenticated %}
         {% if grid.enabled %}
-        <div class="card card-body bg-light" style="min-height:200px;text-align:center;">
+        <div class="well" style="min-height:200px;text-align:center;">
             <div id="color-picker" style="display:inline-grid;">
                 {% for color in grid.legal_colors %}
                 <div class="test1 color-preview" id="div{{ forloop.counter }}" color="{{ color }}"  style="background-color:#{{ color }}" onclick="selectColor(this)"></div>
