--- a/nablapps/podcast/templates/podcast/season.html
+++ b/nablapps/podcast/templates/podcast/season.html
@@ -48,19 +48,19 @@
         <p>Ingen podcast tilgjengelig.</p>
     {% endif %}
 <nav>
-    <ul class="pagination">
+    <ul class="pager">
         {% if previous %}
-            <li class="page-item">
-                <a class="page-link" href="{{ previous.get_absolute_url }}"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige sesong</span></a>
+            <li class="previous">
+                <a href="{{ previous.get_absolute_url }}"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige sesong</span></a>
             </li>
         {% else %}
-             <li class="page-item" style="visibility: hidden">
-                <a class="page-link"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige sesong</span></a>
+             <li class="previous" style="visibility: hidden">
+                <a><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige sesong</span></a>
             </li>
         {% endif %}
 
-        <li class="disabled page-item">
-            <div class = "page-link opt">
+        <li class="disabled pager-counter">
+            <div class = "opt">
                 <select onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
                     {% for i in season_list %}
                         <option value="{% url "season_view" i.number %}" {% if i == season %} selected {% endif %} >{{ i.name }}</option>
@@ -70,12 +70,12 @@
         </li>
 
         {% if next %}
-            <li class=" page-item ">
-                <a class="page-link" href="{{ next.get_absolute_url }}"><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
+            <li class="next">
+                <a href="{{ next.get_absolute_url }}"><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
             </li>
         {% else %}
-            <li class="page-item" style="visibility: hidden">
-                <a class="page-link" ><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
+            <li class="next" style="visibility: hidden">
+                <a><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
     </ul>
