--- a/nablapps/poll/templates/poll/poll_include.html
+++ b/nablapps/poll/templates/poll/poll_include.html
@@ -10,7 +10,7 @@
     <link href="{% static "poll/poll_sidebar.css" %}" rel="stylesheet">
 {% endaddtoblock %}
 
-<div class="poll card card-body bg-light">
+<div class="poll well">
     <h4>{{ poll.question }}</h4>
 
     {% if poll_has_voted %}
@@ -20,7 +20,7 @@
     {% endif %}
 </div>
 {% else %}
-    <div class="card card-body bg-light">
+    <div class="well">
         <h1>Siste forsideavstemning</h1>
         <h4>...dukker opp her når den kommer!</h4>
     </div>
