--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -22,7 +22,7 @@
         "upcoming-events upcoming-events office"
         "more-news-1     more-news-2     poll"
         "more-news-3     more-news-4     latest-podcast"
-        ".               more-news-btn   ."
+        "more-news-btn   more-news-btn   ."
         "latest-nablad   latest-nablad   suggestions"
         "sponsors        sponsors        sponsors";
 }
