--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -20,18 +20,16 @@
 <div class="col-md-12">
 
 <h2>Kalender {{ this.year }}</h2>
-<ul class="pagination">
+<ul class="pagination d-flex justify-content-between">
     <li class="page-item">
         <a class="page-link" href="{% url "event_list" prev.year prev.month %}">&laquo;</a>
     </li>
     <li class="page-item">
-        <div class ="page-link opt">
-            <select onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
+            <select class="form-control m-0 page-link text-primary" onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
                 {% for i in month_list %}
                     <option value="{% url "event_list" i.year i.month %}" {% if i == month_list.5 %} selected {% endif %} >{{ i|date:"F"|capfirst }}</option>
                 {% endfor %}
             </select>
-        </div>
     </li>
     <li class="page-item">
         <a href="{% url "event_list" next.year next.month %}">&raquo;</a>
