--- a/nablapps/podcast/templates/podcast/season.html
+++ b/nablapps/podcast/templates/podcast/season.html
@@ -48,7 +48,7 @@
         <p>Ingen podcast tilgjengelig.</p>
     {% endif %}
 <nav>
-    <ul class="pagination">
+    <ul class="pagination d-flex justify-content-between" >
         {% if previous %}
             <li class="page-item">
                 <a class="page-link" href="{{ previous.get_absolute_url }}"><span aria-hidden="true">&larr;</span><span class="hidden-xs"> Forrige sesong</span></a>
@@ -59,22 +59,20 @@
             </li>
         {% endif %}
 
-        <li class="disabled page-item">
-            <div class = "page-link opt">
-                <select onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
+        <li class=" page-item ">
+                <select class="form-control m-0 page-link text-primary" onchange="if (this.value) window.location.href=this.value" onmouseover="" style="cursor: pointer;">
                     {% for i in season_list %}
-                        <option value="{% url "season_view" i.number %}" {% if i == season %} selected {% endif %} >{{ i.name }}</option>
+                        <option c value="{% url "season_view" i.number %}" {% if i == season %} selected {% endif %} >{{ i.name }}</option>
                     {% endfor %}
                 </select>
-            </div>
         </li>
 
         {% if next %}
-            <li class=" page-item ">
+            <li class=" page-item">
                 <a class="page-link" href="{{ next.get_absolute_url }}"><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
             </li>
         {% else %}
-            <li class="page-item" style="visibility: hidden">
+            <li class="page-item " style="visibility: hidden">
                 <a class="page-link" ><span class="hidden-xs">Neste sesong </span><span aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
