--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -4,7 +4,7 @@ It fits perfectly if you are using the django.views.generic.ListView with pagina
 {% endcomment %}
 {% if is_paginated %}
     <nav>
-        <ul class="pagination">
+        <ul class="pagination d-flex justify-content-between">
             {% if page_obj.has_next %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{ page_obj.next_page_number }}"><span aria-hidden="true">&larr;</span> Eldre</a>
