Fikset manglende panel fra bootstrap 3

--- a/templates/content/includes/sidebar-admin.html
+++ b/templates/content/includes/sidebar-admin.html
@@ -3,16 +3,14 @@
     <div class="card-header">
         Admin
     </div>
-    <ul class="nav">
+    <ul class="nav flex-column">
         {% for link in admin_links %}
-        <li>
-            <a href="{{ link.url }}">
+            <a class="nav-link" href="{{ link.url }}">
                 {% if link.glyphicon_symbol %}
                 <span class="glyphicon glyphicon-{{ link.glyphicon_symbol }}"></span>
                 {% endif %}
                 {{ link.name }}
             </a>
-        </li>
         {% endfor %}
     </ul>
 </div>
