Revert "Revert "Merge branch 'master' of https://github.com/Nabla-NTNU/nablaweb""
This reverts commit 42f43bfc6877ac47c25efb6f47e06a05de80d116.

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,10 +9,10 @@
 {% endaddtoblock %}
 
 <div class="main-grid-container">
-    <div class="navbar navbar-container">
+    <div >
         {% block navbar %}
-            <h1 style="text-align: center">Om Nabla</h1>
-            <ul class="nav-list">
+            <h1 >Om Nabla</h1>
+            <ul class="list-group nav-list">
                 <a href="{% url "om-nabla" %}"><li>Generelt om Nabla</li></a>
                 <a href="{% url "show-board-page" slug="styret" %}"><li>Styret</li></a>
                 <a href="{% url "committee_overview" %}"><li>Undergrupper</li></a>
@@ -25,8 +25,8 @@
                 <a href="{{ page.url }}"><li>{{ page.title }}</li></a>
                 {% endfor %}
             </ul>
-            <h3 style="text-align: center">Diverse</h3>
-            <ul class="nav-list">
+            <h3 >Diverse</h3>
+            <ul class="list-group nav-list">
                 <a href="{% url 'nablashop:index' %}"><li>Nablashop</li></a>
                 <a href="/nystudent/"><li>For nye studenter</li></a>
                 <a href="{% url "news_list" %}"><li>Nyhetsartikler</li></a>
