--- a/nablapps/album/templates/album/album_list.html
+++ b/nablapps/album/templates/album/album_list.html
@@ -29,20 +29,19 @@
 </div>
 {% endfor %}
 <nav>
-    <ul class="pager">
+    <ul class="pagination">
       {% if page_obj.has_previous %}
-          <li class="previous">
-              <a href="?page={{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
-          </li>
+          <li class="page-item">
+              <a class="page-link" href="{{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
       {% endif %}
 
-        <li class="disabled pager-counter">
+        <li class="disabled page-item">
             Side {{ page_obj.number }} av {{ page_obj.paginator.num_pages }}
         </li>
 
         {% if page_obj.has_next %}
-            <li class="next">
-                <a href="?page={{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
+            <li class="page-item">
+                <a class="page-link" href="{{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
             </li>
         {% endif %}
     </ul>
