Set background color to slight gray again

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -7,7 +7,7 @@ If the html,body height-rule is indeed not necessary, is should be removed (I be
 /* MAIN */
 html, body {
     height: 100%;
-    background-color: #FFFFFF;
+    background-color: #f7f7f7;
 
 }
 
