Adds border to mainContent

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -8,7 +8,12 @@ If the html,body height-rule is indeed not necessary, is should be removed (I be
 html, body {
     height: 100%;
     background-color: #f7f7f7;
+}
 
+#mainContent{
+    border-style: solid;
+    border-width: thin;
+    border-color: lightgray;
 }
 
 .logo {
