--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -6,9 +6,10 @@
 <ul class="nav">
 {% for event in upcoming %}
         <li>
-            <a href="{{ event.get_absolute_url }}">
-                <time class="label {{ class }}"
-                      datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"d.m" }}</time>
+            <a  class="text-dark nounderline" href="{{ event.get_absolute_url }}">
+                <time class="badge badge-pill badge-dark {{ class }}"
+                      datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"d.m" }}
+                </time>
                 {{ event.headline }}
                 {% if event.registration_required %}
                     <span title="Ledige plasser / Totalt antall plasser">
