--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -3,9 +3,9 @@
     <link href="{{ STATIC_URL }}events/upcoming_events.css" rel="stylesheet">
 {% endaddtoblock %}
 
-<ul class="nav">
+<ul class="list-group nav">
 {% for event in upcoming %}
-        <li>
+        <li class="mt-1">
             <a  class="text-dark nounderline" href="{{ event.get_absolute_url }}">
                 <time class="badge badge-pill badge-dark {{ class }}"
                       datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"d.m" }}
