Fikset noen små bootstrap4 ting

--- a/nablapps/poll/templates/poll/poll_include.html
+++ b/nablapps/poll/templates/poll/poll_include.html
@@ -10,7 +10,7 @@
     <link href="{% static "poll/poll_sidebar.css" %}" rel="stylesheet">
 {% endaddtoblock %}
 
-<div class="poll card card-body bg-light">
+<div class="poll card card-body card-body-overline bg-light">
     <h4>{{ poll.question }}</h4>
 
     {% if poll_has_voted %}
