--- a/nablapps/poll/templates/poll/user_polls.html
+++ b/nablapps/poll/templates/poll/user_polls.html
@@ -26,7 +26,7 @@ Mine avstemninger
     </form>
 </div>
 
-<div class="poll card card-body bg-light">
+<div class="poll card card-body card-body-overline bg-light">
     <h4>{{ poll.question }}</h4>
 
     {% if poll.voted %}
