--- a/nablapps/interactive/templates/interactive/quiz.html
+++ b/nablapps/interactive/templates/interactive/quiz.html
@@ -11,7 +11,7 @@
 <div class="alert alert-warning alert-dismissible">Dette er bare synlig fordi du har riktige rettigheter</div>
 {% endif %}
 {% if quiz.is_timed %}
-<div class="float-left card card-body bg-light">
+<div class="float-left card card-body card-body-overline bg-light">
     <h2>Tid igjen</h2>
     <div class="countdown"></div>
     <script>
