--- a/templates/includes/upcoming_events.html
+++ b/templates/includes/upcoming_events.html
@@ -5,7 +5,7 @@
 
 <ul class="list-group nav">
 {% for event in upcoming %}
-        <li class="mt-1">
+        <li class="mb-1">
             <a  class="text-dark nounderline" href="{{ event.get_absolute_url }}">
                 <time class="badge badge-pill badge-dark {{ class }}"
                       datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"d.m" }}
