fikset mer nyheter knappen på forsiden

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -51,7 +51,7 @@
     {% include "includes/article_widget.html" with number=forloop.counter %}
     {% endfor %}{# news_list #}
 
-    <button onclick="location.href='{% url "news_list" %}'" type="button" class="more-news-btn btn btn-secondary btn-block">Flere nyheter</button>
+    <button onclick="location.href='{% url "news_list" %}'" type="button" class="more-news-btn btn btn-outline-secondary btn-block">Flere nyheter</button>
 
     <div class="latest-nablad card card-body card-body-overline bg-light">
         <!--Siste Nablad-->
